# Amulet-Map-Editor

./: .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  Amulet.spec  Amulet_Converter.spec  LICENCE  LICENCE.md  LICENSE  LICENSE_SUMMARY.md  MANIFEST.in  Pipfile  README.md  alpha-ui.py  amulet-tech-demo-ui.py  contributing.md  converter-ui.py  cyopengl.pxd  main.py  pip_freeze.py  pyproject.toml  requirements-docs.txt  requirements.txt  requirements_base.txt  requirements_linux.txt  setup.cfg  setup.py
.github/: stale.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature-request.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  new_feature.md
.github/workflows/: nightly.yml  python-build.yml  python-stylecheck.yml  python-unittests.yml
.travis/: osx_build_app.sh  osx_setup_python.sh
CyOpenGL/: __init__.pxd  __init__.pyx  dtypes.pxd  gen.py
CyOpenGL/GL/: GL_1_0.pxd  GL_1_0.pyx  GL_1_1.pxd  GL_1_1.pyx  GL_1_2.pxd  GL_1_2.pyx  GL_1_3.pxd  GL_1_3.pyx  GL_1_4.pxd  GL_1_4.pyx  GL_1_5.pxd  GL_1_5.pyx  GL_2_0.pxd  GL_2_0.pyx  GL_2_1.pxd  GL_2_1.pyx  GL_3_0.pxd  GL_3_0.pyx  GL_3_1.pxd  GL_3_1.pyx  GL_3_2.pxd  GL_3_2.pyx  GL_3_3.pxd  GL_3_3.pyx  GL_4_0.pxd  GL_4_0.pyx  GL_4_1.pxd  GL_4_1.pyx  GL_4_2.pxd  GL_4_2.pyx  GL_4_3.pxd  GL_4_3.pyx  GL_4_4.pxd  GL_4_4.pyx  GL_4_5.pxd  GL_4_5.pyx  GL_4_6.pxd  GL_4_6.pyx  __init__.pxd  load_function.pxd  (+1 more)
amulet_map_editor/: __init__.py  __main__.py  _version.py  amulet-ui.py  amulet.py  amulet_ui.py  load.py  readme.md  resources.py  update_check.py  version
amulet_map_editor/__pyinstaller/: __init__.py  hook-amulet_map_editor.py
amulet_map_editor/amulet_wx/: block_select.py  icon.py  key_config.py  simple.py  world_manager.py  world_select.py  wx_util.py
amulet_map_editor/amulet_wx/ui/: nbt_editor.py  select_block.py  (+4 more)
amulet_map_editor/api/: __init__.py  _log.py  config.py  datatypes.py  lang.py  logging.py  resources.py  version.py
amulet_map_editor/lang/: __init__.py  cs.lang  de.lang  en.lang  en_US.lang  english.lang  es_MX.lang  fr.lang  fr_FR.lang  he_IL.lang  id.lang  ja.lang  ko.lang  pl.lang  pt_BR.lang  ru.lang  tr.lang  uk.lang  vi.lang  zh_CN.lang  zh_TW.lang
amulet_map_editor/opengl/: matrix.py  resource_pack.py  textureatlas.py
amulet_map_editor/plugins/: __init__.py
amulet_map_editor/program_extensions/: __init__.py  block_convert.py  convert.py
amulet_map_editor/programs/: __init__.py
amulet_map_editor/resources/: __init__.py
amulet_map_editor/util/: config.py  log.py  update_check.py  world_select.py  wx_util.py
amulet_map_editor/wx/: block_select.py  world_select.py
amulet_renderer/: render_chunk.py  render_world.py  renderer-ui.py  renderer.py  requirements.txt  shaders.py  textureatlas.py
amulet_renderer/shaders/: render_chunk.frag  render_chunk.vert
contributing/: dev.md  lang.md
converter-ui/: converter-ui.py
docs/: conf.py  getting_started.rst  index.rst  world_converter.rst  world_editor.rst
tests/: test_lang.py
(+529 files in other folders)
