
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = amulet_map_editor/_version.py
versionfile_build = amulet_map_editor/_version.py
tag_prefix =
parentdir_prefix = amulet_map_editor-

[metadata]
name = amulet-map-editor
version = attr: amulet_map_editor.__version__
url = https://www.amuletmc.com
author = James Clare, Ben Gothard et al.
author_email = amuleteditor@gmail.com
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = A new Minecraft world editor and converter that supports all versions since Java 1.12 and Bedrock 1.7.
platforms = any

[options]
python_requires = >=3.6
dependency_links =
    https://github.com/Amulet-Team/Amulet-Core
    https://github.com/gentlegiantJGC/Minecraft-Model-Reader
    https://github.com/gentlegiantJGC/PyMCTranslate
    https://github.com/Amulet-Team/Amulet-NBT

[options.entry_points]
gui_scripts =
    amulet_map_editor = amulet_map_editor:main
