[metadata]
name = amulet-map-editor
url = https://www.amuletmc.com
author = James Clare, Ben Gothard et al.
author_email = amuleteditor@gmail.com
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = A new Minecraft world editor and converter that supports all versions since Java 1.12 and Bedrock 1.7.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
include_package_data = True
python_requires = >=3.6, <3.10
install_requires =
    wxPython==4.1.1
    numpy~=1.17
    pyopengl~=3.0
    ; pyopengl-accelerate does not work for M1 Macs. Amulet-Team/Amulet-Map-Editor#597
    pyopengl-accelerate~=3.0; sys_platform!="darwin" or (sys_platform=="darwin" and platform_machine!="arm")
    packaging
    amulet-core~=1.9
    amulet-nbt~=2.0
    pymctranslate~=1.2
    minecraft-resource-pack~=1.3

packages = find:

[options.packages.find]
include = amulet_map_editor*


[options.extras_require]
docs =
    Sphinx>=1.7.4
    sphinx-autodoc-typehints>=1.3.0
    sphinx_rtd_theme>=0.3.1
dev =
    black>=22.3
    pre_commit>=1.11.1


[options.entry_points]
pyinstaller40 =
    hook-dirs = amulet_map_editor.__pyinstaller:get_hook_dirs
console_scripts =
    amulet_map_editor = amulet_map_editor.__main__:main
gui_scripts =
    amulet_map_editor_no_console = amulet_map_editor.__main__:main


# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = amulet_map_editor/_version.py
versionfile_build = amulet_map_editor/_version.py
tag_prefix =
parentdir_prefix = amulet_map_editor-
